project/logs/20250709_154354.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Qembed_debug:32:9: error: use of undeclared identifier 'gMaterial'
    if (gMaterial.enableLighting != 0)
        ^
Qembed_debug:35:16: error: no member named 'color' in 'VertexShaderOutput'
        output.color = gMaterial.color * textureColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
        ~~~~~~ ^
Qembed_debug:35:24: error: use of undeclared identifier 'gMaterial'
        output.color = gMaterial.color * textureColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
                       ^
Qembed_debug:35:42: error: use of undeclared identifier 'textureColor'
        output.color = gMaterial.color * textureColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
                                         ^
Qembed_debug:40:16: error: no member named 'color' in 'VertexShaderOutput'
        output.color = gMaterial.color * textureColor;
        ~~~~~~ ^
Qembed_debug:40:24: error: use of undeclared identifier 'gMaterial'
        output.color = gMaterial.color * textureColor;
                       ^
Qembed_debug:40:42: error: use of undeclared identifier 'textureColor'
        output.color = gMaterial.color * textureColor;
                                         ^

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

